# Email-sending

./: .env  README.md  dependencies.py  main.py  model.py  pyproject.toml  schemas.py  send_email.py
app/: dependencies.py  hashing_password.py  main.py  send_email.py  setting.py
app/models/: __init__.py  user_model.py
app/schemas/: user_schema.py
