[tool.poetry]
name = "email-sending"
version = "0.1.0"
description = "This is the API that has been created for email sending"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "email_sending"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
uvicorn = "^0.23.1"
psycopg-binary = "^3.1.9"
fastapi-sqlalchemy = "^0.2.1"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
annotated = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
